# farm-plugin-pwa

./: .gitignore  Cargo.toml  README.md  farm_plugin_pwa.win32-x64-msvc.node  options.d.ts  package.json  pnpm-lock.yaml
.github/workflows/: build.yaml  ci.yaml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: farm.config.ts  package.json
playground/pwa/: dynamic_resources_map_3f505ead.mjs  farm_module_system_4e0c4ebc.mjs  farm_runtime_resource_5b9859f7.mjs  farm_runtime_resource_9555c815.mjs  index.html  pwa-sw.js
playground/pwa/assets/css/: index_465f.40296e4e.css.map
playground/pwa/assets/js/: index_60d0.29842554.js  index_a399.1576e581.js  index_a399.6c271401.js  index_a615.bd0c1574.js  index_d466.0d5b09c1.js  index_d466.0d5b09c1.js.map  index_d466.ae2b73bf.js  index_d6c7.61f472d9.js  index_d6c7.67e04dbb.js
scripts/: index.js
src/: lib.rs  script.rs  sw.rs
